--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,13 +60,13 @@ body {
     background-color: firebrick;
     border-radius: 5px;
     padding: 5px 10px;
-    color: black;
+    color: whitesmoke;
     outline: none;
 }
 
 .btn:hover {
     border-color: gold;
-    color: whitesmoke;
+    color: gold;
 }
 
 .controls {
@@ -76,11 +76,16 @@ body {
 }
 
 .start-btn, .next-btn {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     padding: 15px 20px;
 }
 
 .hide {
     display: none;
+}
+
+#question {
+    font-style: italic;
+    font-size: 20px;
 }
