--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,91 +1,108 @@
-*, *::before, *::after {
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #highscore {
-    font-size: 30px;
-    position: absolute;
-    top: 3rem;
-    text-align: right;
-    padding-bottom: 20px;
-    color: whitesmoke;
-    text-shadow: 3px 3px black;
+  font-size: 30px;
+  position: absolute;
+  top: 3rem;
+  text-align: right;
+  padding-bottom: 20px;
+  color: whitesmoke;
+  text-shadow: 3px 3px black;
 }
 
-#timer { 
-    font-size: 30px;
-    position: absolute;
-    right: 33%;
-    top: 55px;
-    color: whitesmoke;
-    text-shadow: 3px 3px black;
+#timer {
+  font-size: 50px;
+  position: absolute;
+  top: 200px;
+  color: whitesmoke;
+  text-shadow: 2px 2px firebrick;
+  text-align: center;
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../images/phoenix.jpg);
-    background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: 30%;
-    background-size: cover;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  background-image: url(../images/drgblack.jpg);
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: 30%;
+  background-size: cover;
+  border-style: solid;
+  border-color: black;
+  border-width: 20px;
+}
+
+#instructions {
+  text-align: center;
+  position: absolute;
+  margin: 650px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  padding: 15px;
+  bottom: 0%;
+  font-size: 20px;
+  box-shadow: 0 0 10px 10px;
 }
 
 .container {
-    width: 800px;
-    max-width: 80%;
-    background-color: whitesmoke;
-    border-radius: 5px;
-    box-shadow: 0 0 10px 4px;
-    padding: 10px;
+  background-color: whitesmoke;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 10px;
+  padding: 10px;
 }
 
 .btn-grid {
-    display: grid;
-    grid-template-columns: repeat(2, auto);
-    gap: 10px;
-    margin: 20px 0;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  margin: 20px 0;
 }
 
 .btn {
-    border-style: solid;
-    border-color: black;
-    border-width: 3px;
-    background-color: firebrick;
-    border-radius: 5px;
-    padding: 5px 10px;
-    color: whitesmoke;
-    outline: none;
+  border-style: solid;
+  border-color: black;
+  border-width: 3px;
+  background-color: firebrick;
+  border-radius: 5px;
+  padding: 5px 10px;
+  color: whitesmoke;
+  outline: none;
 }
 
 .btn:hover {
-    border-color: gold;
-    color: gold;
+  border-color: gold;
+  color: gold;
+  cursor: pointer;
 }
 
 .controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.start-btn, .next-btn {
-    font-size: 2.5rem;
-    font-weight: bold;
-    padding: 15px 20px;
+.start-btn {
+  font-size: 2.5rem;
+  font-weight: bold;
+  padding: 15px 20px;
+  text-shadow: 3px 3px black;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 #question {
-    font-style: italic;
-    font-size: 20px;
+  font-style: italic;
+  font-size: 20px;
 }
